# ez-window

./: CMakeLists.txt  README.md  preconfig.cmake
cmake/: determine_capabilities.cmake
include/ez/window/: BasicEngine.hpp  Core.hpp  Cursor.hpp  Display.hpp  Engine.hpp  RenderContext.hpp  RenderSettings.hpp  Style.hpp  Window.hpp
include/ez/window/backends/: GLFW.hpp  SDL2.hpp  SFML.hpp
src/: Core.cpp  Cursor.cpp  Display.cpp  Engine.cpp  RenderSettings.cpp  Style.cpp  Window.cpp
src/intern/: darwin.cpp  ios.cpp
tests/: CMakeLists.txt
tests/SDL2_test/: main.cpp
tests/SFML_test/: main.cpp
tests/basic_test/: CMakeLists.txt  genex.txt  main.cpp
